--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "uuid": "^3.3.2"
+  },
+  "scripts": {
+    "test": "mocha --exit"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
