--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -22,11 +21,9 @@
     "morgan": "^1.9.1",
     "uuid": "^3.3.2"
   },
-  "scripts": {
-    "test": "mocha --exit"
-  },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
     "mocha": "^5.2.0"
   }
 }
