--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "start": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,11 @@
   },
   "homepage": "https://github.com/jhull1/blog-api#readme",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "mongoose": "^5.4.0",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.9",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
